     just has hard coded values based on the url. (e.g. http:// has a large
     page size, file:// has a small one.) (Robert Collins)

   * New method on ``bzrlib.transport.Transport`` ``open_write_stream`` allows
     incremental addition of data to a file without requiring that all the
     data be buffered in memory. (Robert Collins)

   * New methods on ``bzrlib.knit.KnitVersionedFile``:
     ``get_data_stream(versions)``, ``insert_data_stream(stream)`` and
     ``get_format_signature()``.  These provide some infrastructure for
     efficiently streaming the knit data for a set of versions over the smart
     protocol.

   * Knits with no annotation cache still produce correct annotations.
     (Aaron Bentley)

   * Three new methods have been added to ``bzrlib.trace``:
     ``set_verbosity_level``, ``get_verbosity_level`` and ``is_verbose``.
     ``set_verbosity_level`` expects a numeric value: negative for quiet,
     zero for normal, positive for verbose. The size of the number can be
     used to determine just how quiet or verbose the application should be.
     The existing ``be_quiet`` and ``is_quiet`` routines have been
     integrated into this new scheme. (Ian Clatworthy)

   * Options can now be delcared with a ``custom_callback`` parameter. If
     set, this routine is called after the option is processed. This feature
     is now used by the standard options ``verbose`` and ``quiet`` so that
     setting one implicitly resets the other. (Ian Clatworthy)

   * Rather than declaring a new option from scratch in order to provide
     custom help, a centrally registered option can be decorated using the
     new ``bzrlib.Option.custom_help`` routine. In particular, this routine
     is useful when declaring better help for the ``verbose`` and ``quiet``
     standard options as the base definition of these is now more complex
     than before thanks to their use of a custom callback. (Ian Clatworthy)
      

bzr 0.90 2007-08-28
===================
